--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ type: docker
 name: default
 
 steps:
-  - name: print-success
+  - name: print-start
     image: alpine
     commands:
       - echo "Start Build:"
@@ -11,7 +11,7 @@ steps:
     image: docker:20
     commands:
       - docker build -t my-image .
-  - name: print-success
+  - name: print-end
     image: alpine
     commands:
       - echo "End Build"
