new push test Drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,11 +7,11 @@ steps:
     image: alpine
     commands:
       - echo "Start Build:"
-  - name: build
-    image: docker:20
-    commands:
-      - docker build -t my-image .
-  - name: print-end
-    image: alpine
-    commands:
-      - echo "End Build"
+  # - name: build
+  #   image: docker:20
+  #   commands:
+  #     - docker build -t my-image .
+  # - name: print-end
+  #   image: alpine
+  #   commands:
+  #     - echo "End Build"
