--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
   - name: print-start
     image: alpine
     commands:
-      - echo "Start Build::"
+      - echo "Start Build:"
   # - name: build
   #   image: docker:20
   #   commands:
