new push test Drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,15 @@ type: docker
 name: default
 
 steps:
-  - name: hello
+  - name: print-start
     image: alpine
     commands:
-    - echo 'Hello Worldd'
+      - echo "Start Build:"
+  - name: build
+    image: docker:20
+    commands:
+      - docker build -t my-image .
+  - name: print-end
+    image: alpine
+    commands:
+      - echo "End Build"
