--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
   - name: print-start
     image: alpine
     commands:
-      - echo "Start Builddd:"
+      - echo "Start Builddsd:"
   - name: print-end
     image: alpine
     commands:
